add entities
